testing model over years

--- a/NFL_Team_Analysis.ipynb
+++ b/NFL_Team_Analysis.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f6a9698c",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
     "import pandas as pd\n",
     "\n",
     "# 📥 2. Load and Preview Data\n",
-    "df = pd.read_csv(\"20-21statsnfl.csv\")  # make sure the CSV is saved with this name\n",
+    "df = pd.read_csv(\"20-21nflstats.csv\")  # make sure the CSV is saved with this name\n",
     "# 🧹 Remove duplicate team entries\n",
     "df = df.drop_duplicates(subset='Team', keep='first')\n",
     "df.head()\n",
