fixing file titles

--- a/NFL_Team_Analysis.ipynb
+++ b/NFL_Team_Analysis.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "beffeaec",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
     "import pandas as pd\n",
     "\n",
     "# 📥 2. Load and Preview Data\n",
-    "df = pd.read_csv(\"23-24statsnfl.csv\")  # make sure the CSV is saved with this name\n",
+    "df = pd.read_csv(\"23-24nflstats.csv\")  # make sure the CSV is saved with this name\n",
     "df.head()\n",
     "\n",
     "# 🧹 3. Clean and Parse the Data\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b60d2d5e",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
     "import pandas as pd\n",
     "\n",
     "# 📥 2. Load and Preview Data\n",
-    "df = pd.read_csv(\"22-23statsnfl.csv\")  # make sure the CSV is saved with this name\n",
+    "df = pd.read_csv(\"22-23nflstats.csv\")  # make sure the CSV is saved with this name\n",
     "df.head()\n",
     "\n",
     "# 🧹 3. Clean and Parse the Data\n",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1160f6eb",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
     "import pandas as pd\n",
     "\n",
     "# 📥 2. Load and Preview Data\n",
-    "df = pd.read_csv(\"21-22statsnfl.csv\")  # make sure the CSV is saved with this name\n",
+    "df = pd.read_csv(\"21-22nflstats.csv\")  # make sure the CSV is saved with this name\n",
     "df.head()\n",
     "\n",
     "# 🧹 3. Clean and Parse the Data\n",
